--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         
         async function loadBanner() {
             try {
-                const response = await fetch('https://buffkid.github.io/interlinksite.github.io/banner.html');
+                const response = await fetch('https://interlinkcvhs.org/banner.html');
                 const bannerContent = await response.text();
                 document.getElementById('banner-container').innerHTML = bannerContent;
             } catch (error) {
