--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         
         async function loadNav() {
             try {
-                const response = await fetch('https://buffkid.github.io/interlinksite.github.io/navnav.html');
+                const response = await fetch('https://interlinkcvhs.org/navnav.html');
                 const nav = await response.text();
                 document.getElementById('nav-container').innerHTML = nav;
             } catch (error) {
