--- a/credits.html
+++ b/credits.html
@@ -33,7 +33,7 @@
             <div class="resources-grid">
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Kavin Elangovan</h3>
-                    <p class="resource-description"><strong>Founder-President: </strong>The main coder, developer, and notetaker of the website (Manages  <i> Committees</i>)</p>
+                    <p class="resource-description"><strong>Founder-President: </strong>The main coder, developer, and notetaker of the website (Manages no <i> Committees</i>)</p>
                 </div>
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Sathyan Gopal</h3>
