--- a/credits.html
+++ b/credits.html
@@ -29,50 +29,58 @@
     </header>
     <main class="fade-in">
         <div class="games-container">
-            <h2 class="section-title glow-text">Our Board</h2>
+            <h2 class="section-title glow-text">Our Team</h2>
             <div class="resources-grid">
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Kavin Elangovan</h3>
-                    <p class="resource-description"><strong>Bourd Member: </strong>Member of the board of Interlink(Manages no <i> Committees</i>)</p>
+                    <p class="resource-description"><strong>Founder-President: </strong>The main coder, developer, and notetaker of the website (Manages the <i>Peer Tutoring Committee</i>)</p>
                 </div>
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Sathyan Gopal</h3>
-                    <p class="resource-description"><strong>Board Member </strong>Helps to manage Interlink resources (Manages the <i>Resources Committee</i>)</p>
+                    <p class="resource-description"><strong>Co-President: </strong>Helps to manage Interlink resources (Manages the <i>Resources Committee</i>)</p>
                 </div>
             </div>
             <div class="resources-grid">
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Naithan Mathew</h3>
-                    <p class="resource-description"><strong>Board Member </strong>Liaison to administration and teachers (Manages the <i>Advisory Committee</i>)</p>
+                    <p class="resource-description"><strong>Vice President: </strong>Liaison to administration and teachers (Manages the <i>Advisory Committee</i>)</p>
                 </div>
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Long Nguyen</h3>
-                    <p class="resource-description"><strong>Board Member </strong>Works on expanding and quality assurance testing for our practice question bank (Manages the <i>QBank Committee</i>)</p>
+                    <p class="resource-description"><strong>Co-Vice President: </strong>Works on expanding and quality assurance testing for our practice question bank (Manages the <i>QBank Committee</i>)</p>
                 </div>
             </div>
             <div class="resources-grid">
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Divin Giddaluru</h3>
-                    <p class="resource-description"><strong>Board Member </strong>Helps with web development & coding review</p>
+                    <p class="resource-description"><strong>Secretary: </strong>Helps with web development & coding review</p>
                 </div>
-
+                <div class="resource-card glass-effect">
+                    <h3 class="resource-title">Bennett Woolsey</h3>
+                    <p class="resource-description"><strong>Treasurer: </strong>Our <i>amazing</i> financial manager</p>
+                </div>
             </div>
             <div class="resources-grid">
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Arnav Nemade</h3>
-                    <p class="resource-description"><strong>Board Member </strong>Helps us with presentations and spreading Interlink to new students (Manages the <i>Student PR Committee</i>)</p>
+                    <p class="resource-description"><strong>Student PR & Secondary Coder: </strong>Helps us with presentations and spreading Interlink to new students (Manages the <i>Student PR Committee</i>)</p>
                 </div>
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Eashan Desai</h3>
-                    <p class="resource-description"><strong>Board Member </strong>All-around specialist who can work on a variety of tasks (Manages the <i>YouTube Committee</i>)</p>
+                    <p class="resource-description"><strong>Specialist: </strong>All-around specialist who can work on a variety of tasks (Manages the <i>YouTube Committee</i>)</p>
                 </div>
             </div>
             <div class="resources-grid">
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Vir Sanghavi</h3>
-                    <p class="resource-description"><strong>Board Member </strong>Maintains all information and coordinates committees and members</p>
+                    <p class="resource-description"><strong>Manager: </strong>Maintains all information and coordinates committees and members</p>
                 </div>
-             
+                <div class="resource-card glass-effect">
+                    <h3 class="resource-title">Faris Taghiyev</h3>
+                    <p class="resource-description"><strong>Social Media Manager: </strong>Manages public relations through social media and outreach</p>
+                </div>
+            </div>
+
             <h2 class="section-title glow-text">Advisory Committee</h2>
             <center><h4>Our <strong>Advisory Committee</strong> provides student input and suggestions to improve the website's resources and functionality to help more students.</h4></center>
             <div class="resources-grid">
