--- a/credits.html
+++ b/credits.html
@@ -29,7 +29,7 @@
     </header>
     <main class="fade-in">
         <div class="games-container">
-            <h2 class="section-title glow-text">Our Team</h2>
+            <h2 class="section-title glow-text">Our Board</h2>
             <div class="resources-grid">
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Arnav Nemade</h3>
