--- a/credits.html
+++ b/credits.html
@@ -33,7 +33,7 @@
             <div class="resources-grid">
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Arnav Nemade</h3>
-                    <p class="resource-description"><strong>Board Member: </strong>Helps us with presentations and spreading Interlink to new students (Manages the <i>Student PR Committee</i>)</p>
+                    <p class="resource-description"><strong>Board Member: </strong>Helps with presentations and spreading Interlink to new students and coding(Manages the <i>Student PR Committee</i>)</p>
                 </div>
                 <div class="resource-card glass-effect">
                     <h3 class="resource-title">Divin Giddaluru</h3>
